--- a/index.html
+++ b/index.html
@@ -2,20 +2,23 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>SeeBee – Meliponicultura</title>
+  <title>SeeBee – Meliponicultura Profissional</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css">
   <link rel="stylesheet" href="./css/main.css">
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
   <script src="https://unpkg.com/@supabase/supabase-js@2"></script>
 </head>
-<body class="dark-theme"> <div id="auth-screen">
+<body class="dark-theme">
+
+  <div id="auth-screen">
     <div class="brand-hero">
       <div class="brand-logo">🐝</div>
       <div class="brand-name">SeeBee</div>
     </div>
     <div id="auth-card">
-      <h2>Entrar</h2>
+      <h2 style="margin:0 0 10px">Entrar</h2>
+      <p style="color:var(--text-soft); font-size:14px; margin-bottom:20px">Gerencie seus meliponários e trilhas.</p>
       <div class="auth-field">
         <label>E-mail</label>
         <input id="email" type="email" placeholder="seu@email.com">
@@ -24,89 +27,77 @@
         <label>Senha</label>
         <input id="password" type="password" placeholder="******">
       </div>
-      <div class="auth-buttons">
-        <button id="btnLogin" class="btn-primary">Entrar</button>
-        <button id="btnSignup" class="btn-outline">Criar Conta</button>
-      </div>
+      <button id="btnLogin" class="btn-primary">Entrar</button>
+      <button id="btnSignup" class="btn-outline">Criar Conta</button>
       <button id="btnGoogle" class="btn-google">
-        <span class="btn-google-icon"></span> Entrar com Google
+        <img src="https://www.gstatic.com/firebasejs/ui/2.0.0/images/auth/google.svg" width="18"> Entrar com Google
       </button>
-      <div id="authMsg" class="auth-msg"></div>
+      <div id="authMsg" class="auth-msg" style="margin-top:15px; text-align:center; font-size:14px"></div>
     </div>
   </div>
 
   <div id="app-screen" class="hidden">
     <div id="side-menu" class="side-drawer">
       <div class="drawer-header">
-        <div class="profile-mini">
+        <div class="profile-mini" style="display:flex; align-items:center; gap:12px">
           <div class="avatar-circle" id="menu-avatar-char">U</div>
-          <div class="profile-text">
-             <span id="menu-email-display">usuario@email.com</span>
-             <small id="user-role-badge" class="badge">Entusiasta</small>
-          </div>
+          <span id="menu-email-display" style="font-size:14px; font-weight:600">...</span>
         </div>
-        <button id="close-menu">✕</button>
+        <button id="close-menu" style="background:none; border:none; color:var(--text-soft); font-size:24px">✕</button>
       </div>
       <nav class="drawer-nav">
         <button class="menu-item active" data-target="view-traps">🗺️ Iniciar Trilha / Iscas</button>
         <button class="menu-item" data-target="view-profile">👤 Meus Dados</button>
         <button class="menu-item" data-target="view-meliponaries">🏠 Minhas Colônias</button>
         <button class="menu-item" data-target="view-captures">🍯 Minhas Capturas</button>
-        <button class="menu-item" data-target="view-wild">🌳 Vi na Mata <span class="badge-new">0</span></button>
+        <button class="menu-item" data-target="view-wild">🌳 Vi na Mata</button>
         <button class="menu-item" data-target="view-shop">🛒 Compre</button>
-        <hr>
-        <button id="btnToggleTheme" class="menu-item">🌓 Alternar Tema (Claro/Escuro)</button>
-        <button id="btnLogout" class="menu-item danger">🚪 Sair da Conta</button>
+        <hr style="border:0; border-top:1px solid var(--border-dark); margin:10px 0">
+        <button id="btnToggleTheme" class="menu-item">🌓 Alternar Tema (Light/Dark)</button>
+        <button id="btnLogout" class="menu-item danger">🚪 Sair</button>
       </nav>
     </div>
 
     <header class="app-header">
-      <button id="open-menu" class="btn-icon">☰</button>
-      <div class="brand-mini">SeeBee</div>
+      <button id="open-menu" style="background:none; border:none; color:white; font-size:24px">☰</button>
+      <div class="brand-mini" style="font-weight:900; letter-spacing:1px">SEEBEE</div>
       <div class="status-pill" id="statusPill">
-        <span id="onlineDot" class="status-dot"></span>
-        <span id="onlineText">Online</span>
+        <span id="onlineDot" class="status-dot"></span> <span id="onlineText">Online</span>
       </div>
     </header>
 
-    <main class="content">
+    <main style="padding:16px">
       <section id="view-traps" class="view-section active">
-        <div class="card map-controls">
-          <div class="stats-row">
-            <span id="distanceText">0 m</span> • <span id="nestsCountText">0</span> ninhos marcados
+        <div class="card-maturacao" style="display:flex; justify-content:space-between; align-items:center">
+          <div>
+            <div id="distanceText" style="font-size:20px; font-weight:800">0 m</div>
+            <div id="nestsCountText" style="color:var(--text-soft); font-size:13px">0 ninhos marcados</div>
           </div>
-          <div class="controls-buttons">
-            <button id="btnStartRoute" class="btn-start">▶ Iniciar Trilha</button>
-            <button id="btnFinishRoute" class="btn-stop hidden">■ Finalizar e Salvar</button>
-          </div>
+          <button id="btnStartRoute" class="btn-primary" style="width:auto; padding:10px 20px">▶ Iniciar</button>
+          <button id="btnFinishRoute" class="btn-outline hidden" style="width:auto; margin:0; border-color:var(--danger); color:var(--danger)">■ Parar</button>
         </div>
         <div id="map"></div>
-        <button id="btnMarkNest" class="fab-btn" disabled>+ 🐝</button>
-        
-        <div class="section-header">
-          <h3>Últimas Trilhas</h3>
-          <button class="btn-link" onclick="ui.sideMenu.querySelector('[data-target=view-traps]').click()">Ver mais ></button>
-        </div>
-        <div id="trailsSummary"></div>
+        <button id="btnMarkNest" class="fab-btn" disabled>+</button>
+        <div id="routeHint" class="hidden" style="margin-top:10px; text-align:center; padding:10px; border-radius:10px; background:rgba(34, 197, 94, 0.1)"></div>
       </section>
 
       <section id="view-profile" class="view-section hidden">
-        <h2>👤 Meus Dados</h2>
-        <div class="card">
+        <h2 style="margin-bottom:20px">👤 Meus Dados</h2>
+        <div class="card-maturacao">
           <div class="auth-field">
             <label>Tipo de Perfil</label>
             <select id="userRole">
               <option value="entusiasta">Entusiasta</option>
-              <option value="meliponicultor">Meliponicultor</option>
+              <option value="meliponicultor" selected>Meliponicultor</option>
             </select>
           </div>
-          <div id="meliponicultor-fields" class="hidden">
+          <div id="meliponicultor-fields">
             <div class="auth-field">
               <label>Nome do Meliponário</label>
-              <input id="meliponaryName" type="text" placeholder="Nome da sua criação">
+              <input id="meliponaryName" type="text" placeholder="Ex: Meliponário das Águas">
             </div>
             <div class="auth-field">
-              <label>Tipo de Registro</label>
+              <label>Registro</label>
               <select id="personType">
                 <option value="PF">Pessoa Física (CPF)</option>
                 <option value="PJ">Pessoa Jurídica (CNPJ)</option>
@@ -117,39 +108,32 @@
               <input id="userCNPJ" type="text" placeholder="00.000.000/0000-00">
             </div>
           </div>
-          <button id="btnSaveProfile" class="btn-primary">Salvar Perfil</button>
+          <button id="btnSaveProfile" class="btn-primary">Atualizar Dados</button>
         </div>
       </section>
 
       <section id="view-captures" class="view-section hidden">
         <h2>🍯 Minhas Capturas</h2>
-        <p class="subtle">Monitoramento do prazo de 35 dias.</p>
-        <div id="capturedList" class="list-vertical"></div>
-      </section>
-      
-      <section id="view-meliponaries" class="view-section hidden">
-        <div class="section-title">
-            <h2>🏠 Minhas Colônias</h2>
-            <button class="btn-xs" id="btnAddColony">+ Nova</button>
-        </div>
-        <div id="colonies-list" class="list-vertical"></div>
+        <div id="capturedList"></div>
       </section>
     </main>
 
-    <div id="nest-modal" class="modal-backdrop" style="display:none;">
+    <div id="nest-modal" class="modal-backdrop" style="display:none">
       <div class="modal-card">
-        <h4>Registrar Nova Isca</h4>
-        <div class="modal-body">
-            <p class="subtle">Status: <strong>CATALOGADO</strong></p>
-            <textarea id="nestNote" placeholder="Dica do local (ex: altura, árvore, ponto de referência)"></textarea>
-            <label class="file-label">
-              📷 Foto do Local
-              <input id="nestPhoto" type="file" accept="image/*" capture="environment">
-            </label>
+        <h4 style="margin:0 0 10px">Marcar Isca / Ninho</h4>
+        <div class="auth-field">
+          <label>Observação (Localização, árvore, etc.)</label>
+          <textarea id="nestNote" rows="3" placeholder="Ex: No galho da mangueira a 2m..."></textarea>
         </div>
-        <div class="modal-actions">
-          <button id="nestCancel" class="btn-outline">Cancelar</button>
-          <button id="btnConfirmNest" class="btn-primary">Salvar Registro</button>
+        <div class="auth-field">
+          <label class="btn-outline" style="display:block; text-align:center; padding:15px; border-style:dashed">
+            📷 Capturar Foto
+            <input id="nestPhoto" type="file" accept="image/*" capture="environment" style="display:none">
+          </label>
+        </div>
+        <div style="display:flex; gap:10px">
+          <button id="nestCancel" class="btn-outline" style="flex:1">Cancelar</button>
+          <button id="btnConfirmNest" class="btn-primary" style="flex:1">Salvar</button>
         </div>
       </div>
     </div>
