--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>SeeBee – Meliponicultura</title>
+  <title>SeeBee – Meliponicultura Profissional</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css">
   <link rel="stylesheet" href="./css/main.css">
@@ -17,8 +17,7 @@
       <div class="brand-name">SeeBee</div>
     </div>
     <div id="auth-card">
-      <h2 style="margin:0 0 5px">Entrar</h2>
-      <p style="color:var(--text-soft); font-size:14px; margin-bottom:25px">Gerencie seus meliponários e trilhas.</p>
+      <h2>Entrar</h2>
       <div class="auth-field">
         <label>E-mail</label>
         <input id="email" type="email" placeholder="seu@email.com">
@@ -30,37 +29,48 @@
       <button id="btnLogin" class="btn-primary">Entrar</button>
       <button id="btnSignup" class="btn-outline">Criar Conta</button>
       <button id="btnGoogle" class="btn-google">
-        <img src="https://www.gstatic.com/firebasejs/ui/2.0.0/images/auth/google.svg" width="18"> Entrar com Google
+        <svg width="18" height="18" viewBox="0 0 24 24"><path fill="#fff" d="M21.35 11.1h-9.17v2.73h6.51c-.33 3.81-3.5 5.44-6.5 5.44C8.36 19.27 5 16.25 5 12c0-4.41 3.06-7.27 7.18-7.27c1.69 0 3.15.55 4.12 1.48l2.26-2.26C16.81 2.23 14.67 1.25 12.18 1.25c-5.92 0-10.18 4.41-10.18 10.75S6.43 22.75 12.18 22.75c5.66 0 9.27-4.03 9.27-9.35c0-.83-.1-1.63-.1-2.3z"/></svg>
+        Entrar com Google
       </button>
-      <div id="authMsg" style="margin-top:15px; text-align:center; color:var(--green-primary)"></div>
+      <div id="authMsg"></div>
     </div>
   </div>
 
   <div id="app-screen" class="hidden">
     <div id="side-menu" class="side-drawer">
-      <div style="display:flex; justify-content:space-between; align-items:center; margin-bottom:30px">
-        <div style="display:flex; align-items:center; gap:12px">
-          <div style="width:45px; height:45px; background:var(--green-primary); border-radius:50%; display:flex; align-items:center; justify-content:center; font-weight:bold; color:#052e16" id="menu-avatar-char">U</div>
-          <span id="menu-email-display" style="font-size:14px; font-weight:600">...</span>
+      <div class="drawer-header">
+        <div class="profile-mini">
+          <div class="avatar-circle" id="menu-avatar-char">U</div>
+          <span id="menu-email-display">usuario@email.com</span>
         </div>
-        <button id="close-menu" style="background:none; border:none; color:var(--text-soft); font-size:28px">✕</button>
+        <button id="close-menu">✕</button>
       </div>
       <nav class="drawer-nav">
-        <button class="menu-item active" data-target="view-traps">🗺️ Trilhas e Iscas</button>
-        <button class="menu-item" data-target="view-profile">👤 Meus Dados</button>
-        <button class="menu-item" data-target="view-meliponaries">🏠 Minhas Colônias</button>
-        <button class="menu-item" data-target="view-captures">🍯 Minhas Capturas</button>
-        <button class="menu-item" data-target="view-wild">🌳 Vi na Mata</button>
-        <button class="menu-item" data-target="view-shop">🛒 Compre</button>
-        <hr style="border:0; border-top:1px solid var(--border-dark); margin:15px 0">
+        <button class="menu-item active" data-target="view-traps">
+          <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0 1 18 0z"/><circle cx="12" cy="10" r="3"/></svg>
+          Trilhas e Iscas
+        </button>
+        <button class="menu-item" data-target="view-meliponaries">
+          <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"/><polyline points="9 22 9 12 15 12 15 22"/></svg>
+          Minhas Colônias
+        </button>
+        <button class="menu-item" data-target="view-captures">
+          <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M12 2l3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2z"/></svg>
+          Minhas Capturas
+        </button>
+        <button class="menu-item" data-target="view-profile">
+          <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"/><circle cx="12" cy="7" r="4"/></svg>
+          Meus Dados
+        </button>
+        <hr>
         <button id="btnToggleTheme" class="menu-item">🌓 Modo Claro/Escuro</button>
-        <button id="btnLogout" class="menu-item danger" style="color:var(--danger)">🚪 Sair da Conta</button>
+        <button id="btnLogout" class="menu-item danger">🚪 Sair</button>
       </nav>
     </div>
 
     <header class="app-header">
-      <button id="open-menu" style="background:none; border:none; color:white; font-size:26px">☰</button>
-      <div class="brand-mini" style="font-weight:900; letter-spacing:1px">SEEBEE</div>
+      <button id="open-menu">☰</button>
+      <div class="brand-mini">SEEBEE</div>
       <div class="status-pill" id="statusPill">
         <span id="onlineDot" class="status-dot"></span> <span id="onlineText">Online</span>
       </div>
@@ -68,33 +78,32 @@
 
     <main style="padding:16px">
       <section id="view-traps" class="view-section active">
-        <div class="card" style="display:flex; justify-content:space-between; align-items:center">
+        <div class="card-summary">
           <div>
-            <div id="distanceText" style="font-size:24px; font-weight:900">0 m</div>
-            <div id="nestsCountText" style="color:var(--text-soft); font-size:13px">0 ninhos na trilha</div>
+            <div id="distanceText">0 m</div>
+            <div id="nestsCountText">0 ninhos marcados</div>
           </div>
-          <button id="btnStartRoute" class="btn-primary" style="width:auto; padding:10px 25px">▶ Iniciar</button>
-          <button id="btnFinishRoute" class="btn-outline hidden" style="width:auto; margin:0; border-color:var(--danger); color:var(--danger)">■ Finalizar</button>
+          <button id="btnStartRoute" class="btn-primary-sm">▶ Iniciar</button>
+          <button id="btnFinishRoute" class="btn-outline-sm hidden">■ Parar</button>
         </div>
         <div id="map"></div>
         <button id="btnMarkNest" class="fab-btn" disabled>+</button>
-        <div id="routeHint" class="hidden"></div>
       </section>
 
       <section id="view-profile" class="view-section hidden">
-        <h2>Meus Dados</h2>
+        <h2>👤 Meus Dados</h2>
         <div class="card">
           <div class="auth-field">
-            <label>Perfil</label>
+            <label>Tipo de Perfil</label>
             <select id="userRole">
               <option value="entusiasta">Entusiasta</option>
               <option value="meliponicultor">Meliponicultor</option>
             </select>
           </div>
-          <div id="meliponicultor-fields">
+          <div id="meliponicultor-fields" class="hidden">
             <div class="auth-field">
               <label>Nome do Meliponário</label>
-              <input id="meliponaryName" type="text" placeholder="Nome da sua criação">
+              <input id="meliponaryName" type="text" placeholder="Ex: Meliponário das Abelhas">
             </div>
             <div class="auth-field">
               <label>Registro</label>
@@ -108,31 +117,26 @@
               <input id="userCNPJ" type="text" placeholder="00.000.000/0000-00">
             </div>
           </div>
-          <button id="btnSaveProfile" class="btn-primary">Atualizar Perfil</button>
+          <button id="btnSaveProfile" class="btn-primary">Salvar Perfil</button>
         </div>
       </section>
 
       <section id="view-captures" class="view-section hidden">
-        <h2>🍯 Minhas Capturas (35 dias)</h2>
+        <h2>🍯 Minhas Capturas</h2>
         <div id="capturedList"></div>
       </section>
     </main>
 
     <div id="nest-modal" class="modal-backdrop" style="display:none">
       <div class="modal-card">
-        <h3>Marcar Isca</h3>
-        <p style="color:var(--text-soft); font-size:13px">Status padrão: CATALOGADO</p>
-        <div class="auth-field">
-          <label>Observação</label>
-          <textarea id="nestNote" rows="3"></textarea>
-        </div>
-        <div class="auth-field">
-          <label class="btn-outline" style="display:block; text-align:center; padding:15px; border-style:dashed">
-            📷 Foto do Local
-            <input id="nestPhoto" type="file" accept="image/*" capture="environment" style="display:none">
-          </label>
-        </div>
-        <div style="display:flex; gap:10px">
+        <h3>Marcar Registro</h3>
+        <p class="subtle">Status: CATALOGADO</p>
+        <textarea id="nestNote" rows="3" placeholder="Nota sobre o local..."></textarea>
+        <label class="btn-outline" style="display:block; text-align:center; padding:15px; border-style:dashed">
+          📷 Tirar Foto
+          <input id="nestPhoto" type="file" accept="image/*" capture="environment" style="display:none">
+        </label>
+        <div style="display:flex; gap:10px; margin-top:15px">
           <button id="nestCancel" class="btn-outline" style="flex:1">Cancelar</button>
           <button id="btnConfirmNest" class="btn-primary" style="flex:1">Salvar</button>
         </div>
