--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>SeeBee – Meliponicultura Profissional</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css">
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
   <link rel="stylesheet" href="./css/main.css">
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
   <script src="https://unpkg.com/@supabase/supabase-js@2"></script>
@@ -41,30 +41,18 @@
       <div class="drawer-header">
         <div class="profile-mini">
           <div class="avatar-circle" id="menu-avatar-char">U</div>
-          <span id="menu-email-display">usuario@email.com</span>
+          <span id="menu-email-display">...</span>
         </div>
         <button id="close-menu">✕</button>
       </div>
       <nav class="drawer-nav">
-        <button class="menu-item active" data-target="view-traps">
-          <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0 1 18 0z"/><circle cx="12" cy="10" r="3"/></svg>
-          Trilhas e Iscas
-        </button>
-        <button class="menu-item" data-target="view-meliponaries">
-          <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"/><polyline points="9 22 9 12 15 12 15 22"/></svg>
-          Minhas Colônias
-        </button>
-        <button class="menu-item" data-target="view-captures">
-          <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M12 2l3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2z"/></svg>
-          Minhas Capturas
-        </button>
-        <button class="menu-item" data-target="view-profile">
-          <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"/><circle cx="12" cy="7" r="4"/></svg>
-          Meus Dados
-        </button>
+        <button class="menu-item active" data-target="view-traps">🗺️ Trilhas e Iscas</button>
+        <button class="menu-item" data-target="view-meliponaries">🏠 Minhas Colônias</button>
+        <button class="menu-item" data-target="view-captures">🍯 Minhas Capturas</button>
+        <button class="menu-item" data-target="view-profile">👤 Meus Dados</button>
         <hr>
         <button id="btnToggleTheme" class="menu-item">🌓 Modo Claro/Escuro</button>
-        <button id="btnLogout" class="menu-item danger">🚪 Sair</button>
+        <button id="btnLogout" class="menu-item danger">Sair da Conta</button>
       </nav>
     </div>
 
@@ -84,61 +72,30 @@
             <div id="nestsCountText">0 ninhos marcados</div>
           </div>
           <button id="btnStartRoute" class="btn-primary-sm">▶ Iniciar</button>
-          <button id="btnFinishRoute" class="btn-outline-sm hidden">■ Parar</button>
+          <button id="btnFinishRoute" class="btn-stop-sm hidden">■ Parar</button>
         </div>
         <div id="map"></div>
         <button id="btnMarkNest" class="fab-btn" disabled>+</button>
+        <div id="routeHint" class="hidden"></div>
       </section>
 
-      <section id="view-profile" class="view-section hidden">
-        <h2>👤 Meus Dados</h2>
-        <div class="card">
-          <div class="auth-field">
-            <label>Tipo de Perfil</label>
-            <select id="userRole">
-              <option value="entusiasta">Entusiasta</option>
-              <option value="meliponicultor">Meliponicultor</option>
-            </select>
-          </div>
-          <div id="meliponicultor-fields" class="hidden">
-            <div class="auth-field">
-              <label>Nome do Meliponário</label>
-              <input id="meliponaryName" type="text" placeholder="Ex: Meliponário das Abelhas">
-            </div>
-            <div class="auth-field">
-              <label>Registro</label>
-              <select id="personType">
-                <option value="PF">Pessoa Física (CPF)</option>
-                <option value="PJ">Pessoa Jurídica (CNPJ)</option>
-              </select>
-            </div>
-            <div id="cnpj-field" class="auth-field hidden">
-              <label>CNPJ</label>
-              <input id="userCNPJ" type="text" placeholder="00.000.000/0000-00">
-            </div>
-          </div>
-          <button id="btnSaveProfile" class="btn-primary">Salvar Perfil</button>
-        </div>
-      </section>
-
-      <section id="view-captures" class="view-section hidden">
-        <h2>🍯 Minhas Capturas</h2>
-        <div id="capturedList"></div>
-      </section>
+      <section id="view-profile" class="view-section hidden"><h2>Meus Dados</h2></section>
+      <section id="view-meliponaries" class="view-section hidden"><h2>Minhas Colônias</h2></section>
+      <section id="view-captures" class="view-section hidden"><h2>Minhas Capturas</h2></section>
     </main>
 
     <div id="nest-modal" class="modal-backdrop" style="display:none">
       <div class="modal-card">
-        <h3>Marcar Registro</h3>
-        <p class="subtle">Status: CATALOGADO</p>
-        <textarea id="nestNote" rows="3" placeholder="Nota sobre o local..."></textarea>
-        <label class="btn-outline" style="display:block; text-align:center; padding:15px; border-style:dashed">
+        <h3>Marcar Isca</h3>
+        <p class="subtle">Status padrão: CATALOGADO</p>
+        <textarea id="nestNote" rows="3" placeholder="Observação local..."></textarea>
+        <label class="btn-outline-photo">
           📷 Tirar Foto
           <input id="nestPhoto" type="file" accept="image/*" capture="environment" style="display:none">
         </label>
-        <div style="display:flex; gap:10px; margin-top:15px">
-          <button id="nestCancel" class="btn-outline" style="flex:1">Cancelar</button>
-          <button id="btnConfirmNest" class="btn-primary" style="flex:1">Salvar</button>
+        <div class="modal-actions">
+          <button id="nestCancel" class="btn-outline-sm">Cancelar</button>
+          <button id="btnConfirmNest" class="btn-primary-sm">Salvar</button>
         </div>
       </div>
     </div>
