--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
         <div class="profile-mini">
           <div class="avatar-circle" id="menu-avatar-char">U</div>
           <img id="menu-avatar-img" src="" class="hidden" style="width:45px; height:45px; border-radius:50%; object-fit:cover; border:2px solid var(--primary);">
-          
           <div style="margin-left:10px;">
              <span id="menu-name-display" style="display:block; font-weight:bold; font-size:16px;">Usuário</span>
              <span id="menu-user-role" style="display:block; font-size:12px; color:var(--primary); text-transform:uppercase; margin-top:2px;">Carregando...</span>
@@ -50,7 +49,7 @@
 
     <header class="app-header">
       <button id="open-menu" class="btn-icon">☰</button>
-      <div class="brand-mini">SEEBEE</div>
+      <div class="brand-mini">SeeBee</div>
       <div style="width:24px;"></div>
     </header>
 
