--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
   </div>
 
   <div id="app-screen" class="hidden">
-    
     <div id="side-menu" class="side-drawer">
       <div class="drawer-header">
         <div class="profile-mini">
@@ -68,42 +67,21 @@
       </section>
 
       <section id="view-traps" class="view-section hidden">
-        <div style="display:flex; justify-content:space-between; margin-bottom:15px;">
-          <button class="btn-back" onclick="document.querySelector('[data-target=view-home]').click()">← Voltar</button>
-          <div id="statusPill" class="status-pill"><span id="onlineDot" class="status-dot"></span><span id="onlineText">Online</span></div>
-        </div>
+        <div style="display:flex; justify-content:space-between; margin-bottom:15px;"><button class="btn-back" onclick="document.querySelector('[data-target=view-home]').click()">← Voltar</button><div id="statusPill" class="status-pill"><span id="onlineDot" class="status-dot"></span><span id="onlineText">Online</span></div></div>
         <div class="tracking-card">
           <div class="card-header"><h3>Instalação</h3><span id="statusBadge" class="badge-status">Parado</span></div>
-          <div class="action-buttons-row">
-            <button id="btnStartRoute" class="btn-action-start">▶ Iniciar</button>
-            <button id="btnFinishRoute" class="btn-action-stop hidden">■ Parar</button>
-            <button id="btnMarkNest" class="btn-action-nest" disabled>+ Ninho</button>
-          </div>
-          <div class="stats-row">
-            <div class="stat-pill">Dist: <b id="distanceText">0 m</b></div>
-            <div class="stat-pill">Ninhos: <b id="nestsCountText">0</b></div>
-            <div class="stat-pill" id="gpsStatus">GPS...</div>
-          </div>
+          <div class="action-buttons-row"><button id="btnStartRoute" class="btn-action-start">▶ Iniciar</button><button id="btnFinishRoute" class="btn-action-stop hidden">■ Parar</button><button id="btnMarkNest" class="btn-action-nest" disabled>+ Ninho</button></div>
+          <div class="stats-row"><div class="stat-pill">Dist: <b id="distanceText">0 m</b></div><div class="stat-pill">Ninhos: <b id="nestsCountText">0</b></div><div class="stat-pill" id="gpsStatus">GPS...</div></div>
         </div>
         <div id="map"></div>
-        <div class="mini-history-section">
-          <h3 class="list-label" style="margin-top:0;">Últimas Instalações</h3>
-          <div id="trailsListRecent"></div>
-          <button id="btnSeeAllTrails" class="btn-see-all">Ver Histórico Completo</button>
-        </div>
+        <div class="mini-history-section"><h3 class="list-label" style="margin-top:0;">Últimas Instalações</h3><div id="trailsListRecent"></div><button id="btnSeeAllTrails" class="btn-see-all">Ver Histórico Completo</button></div>
       </section>
 
       <section id="view-meliponaries" class="view-section hidden">
         <div style="margin-bottom:15px;"><button class="btn-back" onclick="document.querySelector('[data-target=view-home]').click()">← Voltar</button></div>
         <div class="segment-control"><button class="segment-btn active" data-sub="tab-matrices">Minhas Matrizes</button><button class="segment-btn" data-sub="tab-history">Histórico Instalações</button></div>
-        <div id="tab-matrices" class="tab-content">
-          <button id="btnAddColony" class="btn-primary-sm" style="margin-bottom:15px;">+ Nova Matriz</button>
-          <div id="coloniesList"></div>
-        </div>
-        <div id="tab-history" class="tab-content hidden">
-          <div class="filter-bar"><span style="font-size:12px; color:#9ca3af;">Filtrar data:</span><input type="date" id="historyDateFilter" style="background:#020617; border:1px solid #374151; color:white; padding:5px; border-radius:6px;"></div>
-          <div id="trailsListHistory"></div>
-        </div>
+        <div id="tab-matrices" class="tab-content"><button id="btnAddColony" class="btn-primary-sm" style="margin-bottom:15px;">+ Nova Matriz</button><div id="coloniesList"></div></div>
+        <div id="tab-history" class="tab-content hidden"><div class="filter-bar"><span style="font-size:12px; color:#9ca3af;">Filtrar data:</span><input type="date" id="historyDateFilter" style="background:#020617; border:1px solid #374151; color:white; padding:5px; border-radius:6px;"></div><div id="trailsListHistory"></div></div>
       </section>
 
       <section id="view-captures" class="view-section hidden">
@@ -140,13 +118,8 @@
       <div class="modal-card">
         <h3>Registrar Ninho</h3><p style="color:#94a3b8; font-size:12px;">Status: CATALOGADO</p>
         <textarea id="nestNote" rows="3" placeholder="Observações..."></textarea>
-        <label id="btnNestPhotoLabel" class="btn-outline-photo" style="margin-top:15px;">
-          📷 Foto <input id="nestPhoto" type="file" accept="image/*" style="display:none">
-        </label>
-        <div class="modal-actions" style="margin-top:20px;">
-          <button id="nestCancel" class="btn-ghost">Cancelar</button>
-          <button id="btnConfirmNest" class="btn-solid">Salvar</button>
-        </div>
+        <label id="btnNestPhotoLabel" class="btn-outline-photo" style="margin-top:15px;">📷 Foto <input id="nestPhoto" type="file" accept="image/*" style="display:none"></label>
+        <div class="modal-actions" style="margin-top:20px;"><button id="nestCancel" class="btn-ghost">Cancelar</button><button id="btnConfirmNest" class="btn-solid">Salvar</button></div>
       </div>
     </div>
 
@@ -159,9 +132,7 @@
            <div style="display:flex; align-items:center; gap:10px; margin-bottom:10px;"><img id="captureSpeciesPreview" src="https://cdn-icons-png.flaticon.com/512/3069/3069186.png" style="width:40px; height:40px; border-radius:50%; object-fit:cover; border:1px solid #374151;"><p style="font-size:13px; color:#10b981; font-weight:bold; margin:0;">Captura Confirmada</p></div>
            <label class="field-label">Espécie</label><select id="editCapturePopular" class="input-dark"><option value="">Não identificada</option></select>
            <select id="editCaptureScientific" class="input-dark" disabled><option value="Sem identificação">Sem identificação</option></select>
-           <label id="btnEditPhotoLabel" class="btn-outline-photo" style="margin:10px 0; padding:15px; border-color:var(--primary);">
-             📷 Atualizar Foto <input id="editNestPhoto" type="file" accept="image/*" style="display:none">
-           </label>
+           <label id="btnEditPhotoLabel" class="btn-outline-photo" style="margin:10px 0; padding:15px; border-color:var(--primary);">📷 Atualizar Foto <input id="editNestPhoto" type="file" accept="image/*" style="display:none"></label>
         </div>
         <label class="field-label">Observações</label><textarea id="editNestNote" rows="3" class="input-dark"></textarea>
         <div class="modal-actions"><button id="btnCancelEditNest" class="btn-ghost">Cancelar</button><button id="btnSaveEditNest" class="btn-solid">Atualizar</button></div>
@@ -205,6 +176,7 @@
 
     <div id="routeHint" class="hint-toast hidden"></div>
   </div>
-  <script type="module" src="./js/main.js"></script>
+  
+  <script type="module" src="./js/app.js"></script>
 </body>
 </html>
